--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,81 @@
+@charset "UTF-8";
 body {
-  color: red;
+  background-color: #575858;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  margin: 0;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.can {
+  background-color: #d5d7d8;
+  width: 200px;
+  height: 500px;
+}
+.can:before {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  border-bottom: 2px black dashed;
+}
+.can:after {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 25px;
+  bottom: 0;
+  border-top: 2px black dashed;
+}
+
+.title {
+  color: black;
+  width: 250px;
+  height: 50px;
+  margin-top: 200px;
+  font-family: sans-serif;
+  font-size: 50px;
+  font-weight: 900;
+  text-shadow: 2.5px 0px 1px black;
+  letter-spacing: 0.5px;
+  line-height: 42px;
+  text-align: center;
+  transform: rotate(-15deg) scale(0.75, 1.3) translateX(-30px);
+}
+.title::before {
+  content: "STRONG ZERO";
+}
+
+.subtitle {
+  position: absolute;
+  color: black;
+  width: 175px;
+  height: 28px;
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  text-shadow: 1px 0px 1px black;
+  letter-spacing: 1px;
+  text-align: center;
+  transform: rotate(-15deg);
+  margin-top: 65px;
+  margin-left: 20px;
+}
+.subtitle::before {
+  content: "ダブルレモン";
+}
+
+/** 
+Notes: 
+
+    ::before,::after use "content: ""; position: absolute;"
+    clip-path
+**/
 
 /*# sourceMappingURL=main.css.map */
