--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,87 @@
+@use "sass:math";
+
+$can-width: 200px;
+$can-height: 500px;
+$strong-yellow: #F0E545;
+
 body {
-    color: red;
+    background-color: #575858;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    margin: 0;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.can {
+    background-color: #d5d7d8;
+    width: $can-width;
+    height: $can-height;
+
+    &:before {
+        content: "";
+        position: absolute;
+        width: $can-width;
+        height: 100px;
+        border-bottom: 2px black dashed;
+    }
+    &:after {
+        content: "";
+        position: absolute;
+        width: $can-width;
+        height: 25px;
+        bottom: 0;
+        border-top: 2px black dashed;
+    }
+}
+
+.title {
+    color: black;
+    width: $can-width + 50px;
+    height: 50px;
+    margin-top: math.div($can-height, 2) - 50;
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: 900;
+    text-shadow: 2.5px 0px 1px black;
+    letter-spacing: 0.5px;
+    line-height: 42px;
+    text-align: center;
+    transform: rotate(-15deg) scale(0.75, 1.3) translateX(-30px);
+
+    &::before {
+        content: "STRONG ZERO";
+    }
+}
+
+.subtitle {
+    position: absolute;
+    color: black;
+    width: $can-width - 25px;
+    height: 28px;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+    text-shadow: 1px 0px 1px black;
+    letter-spacing: 1.0px;
+    text-align: center;
+    transform: rotate(-15deg);
+    margin-top: 65px;
+    margin-left: 20px;
+
+    &::before {
+        content: "ダブルレモン";
+    }
+}
+
+/** 
+Notes: 
+
+    ::before,::after use "content: ""; position: absolute;"
+    clip-path
+**/
