--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+* {
+  font-family: "Fjalla One", sans-serif;
+}
+
 body {
   background-color: #575858;
   height: 100vh;
@@ -14,39 +18,41 @@ body {
 }
 
 .can {
-  background-color: #d5d7d8;
+  display: absolute;
+  background-color: #cdcdcd;
   width: 200px;
   height: 500px;
 }
-.can:before {
+.can::before {
   content: "";
   position: absolute;
   width: 200px;
-  height: 100px;
-  border-bottom: 2px black dashed;
+  height: 75px;
+  border-bottom: 2px magenta dashed;
 }
-.can:after {
+.can::after {
   content: "";
   position: absolute;
   width: 200px;
   height: 25px;
   bottom: 0;
-  border-top: 2px black dashed;
+  border-top: 2px magenta dashed;
 }
 
 .title {
   color: black;
-  width: 250px;
+  width: 200px;
   height: 50px;
-  margin-top: 200px;
-  font-family: sans-serif;
-  font-size: 50px;
+  margin-top: 150px;
+  margin-left: 25px;
+  margin-bottom: 85px;
+  font-size: 55px;
   font-weight: 900;
-  text-shadow: 2.5px 0px 1px black;
-  letter-spacing: 0.5px;
-  line-height: 42px;
+  text-shadow: 1px 0px 1px black;
+  letter-spacing: 1px;
+  line-height: 55px;
   text-align: center;
-  transform: rotate(-15deg) scale(0.75, 1.3) translateX(-30px);
+  transform: rotate(-15deg) translateX(-30px);
 }
 .title::before {
   content: "STRONG ZERO";
@@ -55,27 +61,53 @@ body {
 .subtitle {
   position: absolute;
   color: black;
-  width: 175px;
-  height: 28px;
+  width: 200px;
+  height: 20px;
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 900;
-  text-shadow: 1px 0px 1px black;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   text-align: center;
-  transform: rotate(-15deg);
-  margin-top: 65px;
-  margin-left: 20px;
+  transform: rotate(-15deg) scale(1, 1) translate(-5px);
 }
 .subtitle::before {
   content: "ダブルレモン";
 }
+.subtitle::after {
+  position: absolute;
+  content: "";
+}
 
-/** 
-Notes: 
+.ribbon {
+  position: absolute;
+  width: 200px;
+  height: 90px;
+  margin-top: -32px;
+  background-color: #F0E545;
+  clip-path: polygon(0 45px, 200px 0, 200px 45px, 0 90px);
+}
 
-    ::before,::after use "content: ""; position: absolute;"
-    clip-path
-**/
+.can-bottom {
+  position: absolute;
+  height: 180px;
+  width: 200px;
+  margin-top: 13px;
+  background-color: black;
+}
+
+.abv {
+  font-family: "Lato", sans-serif;
+  color: #F0E545;
+  width: 200px;
+  height: 75px;
+  margin-left: 90px;
+  margin-top: 15px;
+  font-size: 80px;
+  font-weight: 900;
+  transform: scale(0.75, 1.1);
+}
+.abv::before {
+  content: "9";
+}
 
 /*# sourceMappingURL=main.css.map */
