--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,10 @@ $can-width: 200px;
 $can-height: 500px;
 $strong-yellow: #F0E545;
 
+* {
+    font-family: 'Fjalla One', sans-serif;
+}
+
 body {
     background-color: #575858;
     height: 100vh;
@@ -19,40 +23,42 @@ body {
 }
 
 .can {
-    background-color: #d5d7d8;
+    display: absolute;
+    background-color: #cdcdcd;
     width: $can-width;
     height: $can-height;
 
-    &:before {
+    &::before {
         content: "";
         position: absolute;
         width: $can-width;
-        height: 100px;
-        border-bottom: 2px black dashed;
+        height: 75px;
+        border-bottom: 2px magenta dashed;
     }
-    &:after {
+    &::after {
         content: "";
         position: absolute;
         width: $can-width;
         height: 25px;
         bottom: 0;
-        border-top: 2px black dashed;
+        border-top: 2px magenta dashed;
     }
 }
 
 .title {
     color: black;
-    width: $can-width + 50px;
+    width: $can-width;
     height: 50px;
-    margin-top: math.div($can-height, 2) - 50;
-    font-family: sans-serif;
-    font-size: 50px;
+    margin-top: 150px;
+    margin-left: 25px;
+    margin-bottom: 85px;
+    font-size:  55px;
     font-weight: 900;
-    text-shadow: 2.5px 0px 1px black;
-    letter-spacing: 0.5px;
-    line-height: 42px;
+    text-shadow: 1px 0px 1px black;
+    letter-spacing: 1px;
+    line-height: 55px;
     text-align: center;
-    transform: rotate(-15deg) scale(0.75, 1.3) translateX(-30px);
+    transform: rotate(-15deg) translateX(-30px);
 
     &::before {
         content: "STRONG ZERO";
@@ -62,26 +68,53 @@ body {
 .subtitle {
     position: absolute;
     color: black;
-    width: $can-width - 25px;
-    height: 28px;
+    width: $can-width;
+    height: 20px;
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 900;
-    text-shadow: 1px 0px 1px black;
-    letter-spacing: 1.0px;
+    letter-spacing: 3px;
     text-align: center;
-    transform: rotate(-15deg);
-    margin-top: 65px;
-    margin-left: 20px;
+    transform: rotate(-15deg) scale(1, 1) translate(-5px);
 
     &::before {
         content: "ダブルレモン";
     }
+    &::after {
+        position: absolute;
+        content: "";
+    }
 }
 
-/** 
-Notes: 
+.ribbon {
+    position: absolute;
+    width: $can-width;
+    height: 90px;
+    margin-top: -32px;
+    background-color: $strong-yellow;
+    clip-path: polygon(0 45px, $can-width 0, $can-width 45px, 0 90px);
+}
 
-    ::before,::after use "content: ""; position: absolute;"
-    clip-path
-**/
+.can-bottom {
+    position: absolute;
+    height: 180px;
+    width: $can-width;
+    margin-top: 13px;
+    background-color: black;
+}
+
+.abv {
+    font-family: 'Lato', sans-serif;
+    color: $strong-yellow;
+    width: $can-width;
+    height: 75px;
+    margin-left: 90px;
+    margin-top: 15px;
+    font-size: 80px;
+    font-weight: 900;
+    transform: scale(0.75, 1.1);
+
+    &::before {
+        content: "9";
+    }
+}
