--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
   font-size: 14px;
   font-weight: 900;
   letter-spacing: 2px;
-  translate: 2px 80px;
+  translate: 4px 80px;
 }
 
 .abv-label {
@@ -127,15 +127,61 @@ body {
   content: "ALC.";
   font-size: 14px;
   font-weight: 100;
-  translate: 52px 42px;
+  translate: 56px 42px;
 }
 .abv-label::after {
   position: absolute;
   content: "%";
   font-size: 22px;
   font-weight: 100;
-  translate: 56px 57px;
+  translate: 60px 57px;
   scale: 150% 100%;
+}
+
+.suntory {
+  position: absolute;
+  color: white;
+  border: 1px solid white;
+  height: 50px;
+  width: 60px;
+  translate: 55px -10px;
+}
+.suntory::before {
+  position: absolute;
+  content: "SUNTORY";
+  font-size: 9px;
+  font-weight: 900;
+  letter-spacing: 2px;
+  scale: 100% 75%;
+  translate: 9px 0px;
+}
+.suntory::after {
+  position: absolute;
+  content: "-196°c";
+  font-family: "Lato", sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+  scale: 75% 100%;
+  translate: -7px 8px;
+}
+
+.suntory-bottom {
+  position: absolute;
+  color: white;
+  background-color: rgb(230, 44, 44);
+  width: 100%;
+  height: 14px;
+  border-top: 1px solid white;
+  translate: 0px 35px;
+}
+.suntory-bottom::before {
+  position: absolute;
+  content: "糖類ゼロ.";
+  font-size: 10px;
+  font-weight: 900;
+  letter-spacing: 2px;
+  scale: 100% 75%;
+  translate: 6px -1px;
 }
 
 /*# sourceMappingURL=main.css.map */
