--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,7 +33,7 @@ body {
         position: absolute;
         width: $can-width;
         height: 75px;
-        border-bottom: 2px magenta dashed;
+        // border-bottom: 2px magenta dashed;
     }
     &::after {
         content: "";
@@ -41,7 +41,7 @@ body {
         width: $can-width;
         height: 25px;
         bottom: 0;
-        border-top: 2px magenta dashed;
+        // border-top: 2px magenta dashed;
     }
 }
 
@@ -49,7 +49,7 @@ body {
     color: black;
     width: $can-width;
     height: 50px;
-    margin-top: 150px;
+    margin-top: 130px;
     margin-left: 25px;
     margin-bottom: 85px;
     font-size:  55px;
@@ -58,7 +58,7 @@ body {
     letter-spacing: 1px;
     line-height: 55px;
     text-align: center;
-    transform: rotate(-15deg) translateX(-30px);
+    transform: rotate(-12.5deg) translateX(-30px);
 
     &::before {
         content: "STRONG ZERO";
@@ -77,26 +77,26 @@ body {
 
     &::before {
         position: absolute;
-        content: "ダブルレモン"; // Dabururemon (double lemon)
-        transform: rotate(-15deg);
-        translate: 40px 0px;
+        content: "ダブルレモン"; // double lemon
+        transform: rotate(-12.5deg);
+        translate: 40px -2.5px;
     }
 }
 
 .ribbon {
     position: absolute;
     width: $can-width;
-    height: 90px;
-    margin-top: -32px;
+    height: 80px;
+    margin-top: -30px;
     background-color: $strong-yellow;
-    clip-path: polygon(0 45px, $can-width 0, $can-width 45px, 0 90px);
+    clip-path: polygon(0 40px, $can-width 0, $can-width 40px, 0 80px);
 }
 
 .can-bottom {
     position: absolute;
-    height: 180px;
+    height: 200px;
     width: $can-width;
-    margin-top: 13px;
+    margin-top: 10px;
     background-color: black;
 }
 
@@ -104,7 +104,7 @@ body {
     font-family: 'Lato', sans-serif;
     width: $can-width;
     height: 75px;
-    margin-left: 105px;
+    margin-left: 112px;
     margin-top: 10px;
     transform: scale(0.75, 1.1);
 
@@ -113,16 +113,17 @@ body {
         content: "9";
         color: $strong-yellow;
         font-size: 80px;
-        font-weight: 900;
+        font-weight: 100;
     }
     &::after {
         position: absolute;
-        content: "アルコール";  // Arukōru (alcohol)
+        content: "アルコール分";  // alcohol content
         color: white;
         font-size: 14px;
         font-weight: 900;
-        letter-spacing: 2px;
-        translate: 4px 80px;
+        letter-spacing: 0.5px;
+        scale: 75% 95%;
+        translate: 0px 78px;
     }
 }
 
@@ -130,20 +131,20 @@ body {
     color: white;
     letter-spacing: 2.5px;
     font-family: 'Fjalla One', sans-serif;
+    font-weight: 100;
     
     &::before {
         position: absolute;
         content: "ALC.";
         font-size: 14px;
-        font-weight: 100;
-        translate: 56px 42px;
+        translate: 47px 42px;
     }
     &::after {
         position: absolute;
         content: "%";
-        font-size: 22px;
+        font-size: 21px;
         font-weight: 100;
-        translate: 60px 57px;
+        translate: 52px 57px;
         scale: 150% 100%
     }
 }
@@ -152,27 +153,27 @@ body {
     position: absolute;
     color: white;
     border: 1px solid white;
-    height: 50px;
-    width: 60px;
-    translate: 55px -10px;
+    height: 40px;
+    width: 50px;
+    translate: 70px 2.5px;
     
     &::before {
         position: absolute;
         content: "SUNTORY";
-        font-size: 9px;
+        font-size: 7px;
         font-weight: 900;
-        letter-spacing: 2.0px;
+        letter-spacing: 1px;
         scale: 100% 75%;
-        translate: 9px 0px;
+        translate: 9px 1px;
     }
     &::after {
         position: absolute;
         content: "-196°c";
         font-family: 'Lato', sans-serif;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 900;
         scale: 75% 100%;
-        translate: -7px 8px;
+        translate: -3px 6px;
     }
 }
 
@@ -181,17 +182,116 @@ body {
     color: white;
     background-color: rgb(230, 44, 44);
     width: 100%;
-    height: 14px;
+    height: 11px;
     border-top: 1px solid white;
-    translate: 0px 35px;
+    translate: 0px 28px;
 
     &::before {
         position: absolute;
-        content: "糖類ゼロ."; // zero saccharides (sugar)
-        font-size: 10px;
+        content: "糖類ゼロ."; // zero saccharides
+        font-size: 8px;
         font-weight: 900;
+        letter-spacing: 1.75px;
+        scale: 100% 80%;
+        translate: 5px -1px;
+    }
+}
+
+.bottom-circle {
+    position: absolute;
+    color: black;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    font-weight: 900;
+    border-radius: 25px;
+    overflow: visible;
+    translate: 4px 40px;
+
+    &::before {
+        position: absolute;
+        content: "さけ"; // sake
+        font-size: 8px;
+        translate: 27px 5px;
+        scale: 80% 100%;
+    }
+    &::after {
+        color: black;
+        position: absolute;
+        content: "お酒"; // sake
+        font-size: 23px;
+        translate: 0px 9px;
+        scale: 70% 100%;
         letter-spacing: 2px;
-        scale: 100% 75%;
-        translate: 6px -1px;
+    }
+}
+
+.bottom-text {
+    position: absolute;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 800;
+    font-size: 10px;
+    height: 25px;
+    width: 100%;
+    bottom: 0;
+
+    &::before {
+        position: absolute;
+        content: "";
+    }
+    &::after {
+        position: absolute;
+        content: "プリン体ゼロヰ"; // zero purines
+        translate: 136px -8px;
+        letter-spacing: 1.25px;
+        font-weight: 100;
+        font-size: 9px;
+        scale: 65% 100%;
+    }
+}
+
+.bottom-text-left {
+    position: absolute;
+    color: white;
+    width: 250px;
+
+    &::before {
+        position: absolute;
+        content: "チューハイ"; // chuhai
+        font-size: 12px;
+        letter-spacing: 0.1px;
+        translate: -12px 0px;
+        scale: 50% 100%;
+    }
+    &::after {
+        position: absolute;
+        content: "スピリッツ(発泡性)①"; // spirits(effervescent)
+        letter-spacing: 0.25px;
+        font-weight: 100;
+        font-size: 9px;
+        translate: 23px 3px;
+        scale: 65% 100%;
+    }
+}
+
+.bottom-text-right {
+    position: absolute;
+    color: white;
+    width: 250px;
+    font-weight: 100;
+    font-size: 9px;
+    letter-spacing: 0.1px;
+    scale: 65% 100%;
+
+    &::before {
+        position: absolute;
+        content: "レモン果汁3%"; // lemon fruit juice 3%
+        translate: 92px 4px;
+    }
+    &::after {
+        position: absolute;
+        content: "レモン浸漬ル使用"; // lemon immersion alcohol use
+        translate: 160px 4px;
     }
 }
